--- a/views/workouts/rest-timer.ejs
+++ b/views/workouts/rest-timer.ejs
@@ -7,11 +7,11 @@
 <section class="md:w-max border border-gray-200 bg-white shadow-md rounded p-4">
     <h2 class="text-6xl font-bold mb-4 text-dyelred2" id="time">0:00</h2>
 
-    <form class="w-max">
+    <form>
         <div class="flex gap-2 items-center">
-            <input type="number" name="min" id="min" min="0" max="59" placeholder="Min" class="shadow border border-slate-300 rounded-lg p-2 text-sm focus:ring-dyelred2 focus:border-dyelred2">
+            <input type="number" name="min" id="min" min="0" max="59" placeholder="Min" class="w-full shadow border border-slate-300 rounded-lg p-2 text-sm focus:ring-dyelred2 focus:border-dyelred2">
             <span>:</span>
-            <input type="number" name="sec" id="sec" min="0" max="59" placeholder="Sec" class="shadow border border-slate-300 rounded-lg p-2 text-sm focus:ring-dyelred2 focus:border-dyelred2">
+            <input type="number" name="sec" id="sec" min="0" max="59" placeholder="Sec" class="w-full shadow border border-slate-300 rounded-lg p-2 text-sm focus:ring-dyelred2 focus:border-dyelred2">
         </div>
 
         <div class="flex gap-2 items-center">
