--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,4 @@
 <%- include("partials/header.ejs") %>
-<!-- <div class="mt-5 flex justify-center gap-2">
-    <a href="/signup" class="rounded-md border border-transparent bg-dyelred2 px-7 py-3 font-medium text-white hover:bg-red-700">Sign Up</a>
-    <a href="/login" class="rounded-md border border-transparent bg-dyelred2 px-7 py-3 font-medium text-white hover:bg-red-700">Log In</a>
-</div> -->
 
 <section class="bg-dyelred">
     <div class="container mx-auto">
@@ -68,7 +64,7 @@
                 <h3 class="text-4xl font-semibold">Any device</h3>
                 <p class="text-xl font-semibold mt-4">Access your data on any device. Available on desktops, tablets, and smartphones.</p>
             </div>
-            <img src="/img/image04.png" class="w-1/2 lg:w-auto">
+            <img src="/img/image04.png" class="w-full lg:w-1/2">
         </div>
     </div>
 </section>
