--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 </section>
 
 <section class="bg-hero-pattern bg-no-reoeat bg-cover h-screen bg-center flex justify-center items-center">
-    <div class="container p-2 text-center">
+    <div class="container p-2 text-center max-w-screen-xl">
         <h2 class="text-6xl text-white font-medium">Track your workouts.</h2>
         <h2 class="text-6xl text-white font-medium">Track your diet.</h2>
 
@@ -22,7 +22,7 @@
 </section>
 
 <section>
-    <div class="container p-2 mx-auto">
+    <div class="container p-2 mx-auto max-w-screen-xl">
         <div class="p-16 flex flex-col lg:flex-row gap-12 items-center justify-center">
             <img src="/img/image01.png" class="w-40 lg:w-1/4">
             <div class="text-center lg:text-left">
@@ -34,7 +34,7 @@
 </section>
 
 <section class="bg-gray-100">
-    <div class="container p-2 mx-auto">
+    <div class="container p-2 mx-auto max-w-screen-xl">
         <div class="p-16 flex flex-col lg:flex-row gap-12 items-center justify-center">
             <div class="text-center lg:text-left">
                 <h3 class="text-4xl font-semibold">Track your diet</h3>
@@ -46,7 +46,7 @@
 </section>
 
 <section>
-    <div class="container p-2 mx-auto">
+    <div class="container p-2 mx-auto max-w-screen-xl">
         <div class="p-16 flex flex-col lg:flex-row gap-12 items-center justify-center">
             <img src="/img/image03.png" class="w-40 lg:w-1/4">
             <div class="text-center lg:text-left">
@@ -58,13 +58,13 @@
 </section>
 
 <section class="bg-gray-100">
-    <div class="container p-2 mx-auto">
+    <div class="container p-2 mx-auto max-w-screen-xl">
         <div class="p-16 flex flex-col lg:flex-row gap-12 items-center justify-center">
             <div class="text-center lg:text-left">
                 <h3 class="text-4xl font-semibold">Any device</h3>
                 <p class="text-xl font-semibold mt-4">Access your data on any device. Available on desktops, tablets, and smartphones.</p>
             </div>
-            <img src="/img/image04.png" class="w-full lg:w-1/2">
+            <img src="/img/image04.png" class="w-full md:w-1/2">
         </div>
     </div>
 </section>
