--- a/public/css/output.css
+++ b/public/css/output.css
@@ -1070,24 +1070,12 @@ input[type="range"]::-ms-fill-lower {
   width: 10rem;
 }
 
-.w-3\/4 {
-  width: 75%;
-}
-
 .w-full {
   width: 100%;
 }
 
 .w-6 {
   width: 1.5rem;
-}
-
-.w-4\/5 {
-  width: 80%;
-}
-
-.w-5\/6 {
-  width: 83.333333%;
 }
 
 .max-w-screen-xl {
@@ -1553,6 +1541,14 @@ input[type="range"]::-ms-fill-lower {
     width: max-content;
   }
 
+  .md\:w-1\/3 {
+    width: 33.333333%;
+  }
+
+  .md\:w-1\/2 {
+    width: 50%;
+  }
+
   .md\:max-w-screen-lg {
     max-width: 1024px;
   }
@@ -1595,19 +1591,11 @@ input[type="range"]::-ms-fill-lower {
     width: 25%;
   }
 
-  .lg\:w-auto {
-    width: auto;
-  }
-
-  .lg\:w-3\/6 {
+  .lg\:w-1\/2 {
     width: 50%;
   }
 
-  .lg\:w-3\/4 {
-    width: 75%;
-  }
-
-  .lg\:w-1\/2 {
+  .lg\:w-3\/6 {
     width: 50%;
   }
 
