--- a/views/main/dashboard.ejs
+++ b/views/main/dashboard.ejs
@@ -10,7 +10,11 @@
     <!-- get most recent date -->
     <div class="bg-white rounded drop-shadow-md border border-gray-200 p-2">
         <h2 class="text-sm font-medium text-dyelred2">Recent workout</h2>
-        <p class="text-lg font-medium"><%= exerciseDates[0]['_id'] %></p>
+        <% if(exerciseDates[0]) { %>
+            <p class="text-lg font-medium"><%= exerciseDates[0]['_id'] %></p>
+        <% } else { %>
+            <p class="text-lg font-medium">None</p>
+        <% } %>
     </div>
 
     <!-- total number of dates -->
@@ -31,7 +35,11 @@
     <!-- get most recent date -->
     <div class="bg-white rounded drop-shadow-md border border-gray-200 p-2">
         <h2 class="text-sm font-medium text-dyelred2">Recent log</h2>
-        <p class="text-lg font-medium"><%= foodDates[0]['_id'] %></p>
+        <% if(foodDates[0]) { %>
+            <p class="text-lg font-medium"><%= foodDates[0]['_id'] %></p>
+        <% } else { %>
+            <p class="text-lg font-medium">None</p>
+        <% } %>
     </div>
 
     <!-- total number of dates -->
