--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,8 @@
 .logo-font {
     font-family: 'Montserrat', sans-serif;
 }
+
+.logo-font-bold {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+}
