--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,6 @@
 
         <div class="flex gap-4 justify-center mt-8">
             <a href="/signup" class="rounded-md border border-transparent bg-dyelred2 px-7 py-3 font-medium text-white hover:bg-red-700">Sign Up</a>
-            
             <a href="/login" class="rounded-md border border-transparent bg-dyelred2 px-7 py-3 font-medium text-white hover:bg-red-700">Log In</a>
         </div>
     </div>
@@ -27,7 +26,7 @@
             <img src="/img/image01.png" class="w-40 lg:w-1/4">
             <div class="text-center lg:text-left">
                 <h3 class="text-4xl logo-font-bold">Track your workouts</h3>
-                <p class="text-xl logo-font-bold mt-4">Add and edit exercises. Plan your training and check your progress.</p>
+                <p class="text-xl logo-font mt-4">Add and edit exercises. Plan your training and check your progress.</p>
             </div>
         </div>
     </div>
@@ -38,7 +37,7 @@
         <div class="p-16 flex flex-col lg:flex-row gap-12 items-center justify-center">
             <div class="text-center lg:text-left">
                 <h3 class="text-4xl logo-font-bold">Track your diet</h3>
-                <p class="text-xl logo-font-bold mt-4">Add and edit meals. Track your calories and protein intake.</p>
+                <p class="text-xl logo-font mt-4">Add and edit meals. Track your calories and protein intake.</p>
             </div>
             <img src="/img/image02.png" class="w-40 lg:w-1/4">
         </div>
@@ -51,7 +50,7 @@
             <img src="/img/image03.png" class="w-40 lg:w-1/4">
             <div class="text-center lg:text-left">
                 <h3 class="text-4xl logo-font-bold">Extra features</h3>
-                <p class="text-xl logo-font-bold mt-4">Includes a plate calculator and rest timer. Use them during your gym session.</p>
+                <p class="text-xl logo-font mt-4">Includes a plate calculator and rest timer. Use them during your gym session.</p>
             </div>
         </div>
     </div>
@@ -62,7 +61,7 @@
         <div class="p-16 flex flex-col lg:flex-row gap-12 items-center justify-center">
             <div class="text-center lg:text-left">
                 <h3 class="text-4xl logo-font-bold">Any device</h3>
-                <p class="text-xl logo-font-bold mt-4">Access your data on any device. Available on desktops, tablets, and smartphones.</p>
+                <p class="text-xl logo-font mt-4">Access your data on any device. Available on desktops, tablets, and smartphones.</p>
             </div>
             <img src="/img/image04.png" class="w-full md:w-1/2">
         </div>
