updated footer links

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,18 +77,14 @@
         <div class="mt-6">
             <h2 class="mb-6 text-sm font-semibold text-white uppercase">Links</h2>
             <ul class="text-white dark:text-gray-400">
-                <li class="mb-4">
-                    <a href="https://github.com/ruinaz90/do-you-even-log" class="hover:underline">GitHub</a>
-                </li>
-                <li>
-                    <a href="#" class="hover:underline"></a>
-                </li>
+                <li class="mb-4"><a href="https://github.com/ruinaz90/do-you-even-log" class="hover:underline">GitHub</a></li>
+                <li><a href="https://github.com/ruinaz90/do-you-even-log/wiki" class="hover:underline">Wiki</a></li>
             </ul>
         </div>
 
         <hr class="my-6 border-gray-600 sm:mx-auto lg:my-8" />
         <div class="sm:flex sm:items-center sm:justify-between">
-            <span class="text-sm text-white sm:text-center">© 2022 <a href="/" class="hover:underline">Do you even log?</a> All Rights Reserved.
+            <span class="text-sm text-white sm:text-center">© 2022 Do you even log? All Rights Reserved.
             </span>
         </div>
     </div>
