--- a/views/index.ejs
+++ b/views/index.ejs
@@ -74,10 +74,10 @@
             <img src="/img/logo.svg" class="flex items-center mr-3 h-8" alt="Do you even log? Logo">
         </div>
 
-        <div class="mt-6">
+        <div class="mt-6 mb-4">
             <h2 class="mb-6 text-sm font-semibold text-white uppercase">Links</h2>
             <ul class="text-white dark:text-gray-400">
-                <li class="mb-4"><a href="https://github.com/ruinaz90/do-you-even-log" class="hover:underline">GitHub</a></li>
+                <li><a href="https://github.com/ruinaz90/do-you-even-log" class="hover:underline">GitHub</a></li>
                 <li><a href="https://github.com/ruinaz90/do-you-even-log/wiki" class="hover:underline">Wiki</a></li>
             </ul>
         </div>
